<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_16dp"
    android:background="@drawable/gradient_nav_bg"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:textSize="@dimen/text_48sp"
        android:textColor="@color/textIconsColor"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_32dp"
        android:paddingLeft="@dimen/margin_8dp"
        android:gravity="center"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/margin_24dp"
        >

        <Button
            android:id="@+id/btn_curated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/curated"
            android:textSize="@dimen/text_16sp"
            android:textStyle="bold"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:textColor="@color/lightPrimaryColor"
            android:fontFamily="monospace"
            android:textAllCaps="false"
            android:backgroundTintMode="multiply"
            android:paddingLeft="@dimen/margin_12dp"
            android:elevation="@dimen/margin_8dp"
            />

        <Button
            android:id="@+id/btn_featured"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8dp"
            android:text="@string/featured"
            android:textSize="@dimen/text_16sp"
            android:textStyle="bold"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:textColor="@color/lightPrimaryColor"
            android:fontFamily="monospace"
            android:backgroundTintMode="multiply"
            android:textAllCaps="false"
            android:paddingLeft="@dimen/margin_12dp"
            android:elevation="@dimen/margin_8dp"
            />

        <Button
            android:id="@+id/btn_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8dp"
            android:text="@string/settings"
            android:textSize="@dimen/text_16sp"
            android:textStyle="bold"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:textColor="@color/lightPrimaryColor"
            android:fontFamily="monospace"
            android:textAllCaps="false"
            android:backgroundTintMode="multiply"
            android:paddingLeft="@dimen/margin_12dp"
            android:elevation="@dimen/margin_8dp"
            />

    </LinearLayout>
</LinearLayout>