<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/gradient_gray"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/img_cover"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/placeholder_image"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            />

        <ImageView
            android:id="@+id/img_layer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="center"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="center"
            android:src="@color/primaryTextColor"
            android:alpha="0.25"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:visibility="gone"
            >

            <!--Profile image-->
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_profile"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/placeholder_user"
                app:civ_border_width="0dp"/>

            <!--UserName-->
            <TextView
                android:id="@+id/txt_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_name"
                android:textSize="@dimen/text_20sp"
                android:gravity="center"
                android:textColor="@color/textIconsColor"
                android:textStyle="bold"
                android:fontFamily="serif"
                android:visibility="visible"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_marginTop="@dimen/margin_12dp"
                />
        </LinearLayout>
    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/margin_16dp"
        >

        <TextView
            android:id="@+id/txt_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/collection_description"
            android:textSize="@dimen/text_16sp"
            android:maxLines="5"
            android:ellipsize="end"
            android:textColor="@color/primaryTextColor"
            android:fontFamily="sans-serif"
            android:textAlignment="viewStart"
            android:textStyle="normal"
            />

        <TextView
            android:id="@+id/txt_total_photos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_photos"
            android:textSize="@dimen/text_16sp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/primaryTextColor"
            android:fontFamily="sans-serif"
            android:textAlignment="viewStart"
            android:textStyle="normal"
            />

        <TextView
            android:id="@+id/txt_published"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/published"
            android:textSize="@dimen/text_16sp"
            android:layout_marginTop="@dimen/margin_12dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/primaryTextColor"
            android:fontFamily="sans-serif"
            android:textAlignment="viewStart"
            android:textStyle="normal"
            />

        <TextView
            android:id="@+id/txt_last_updated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_updated"
            android:textSize="@dimen/text_16sp"
            android:layout_marginTop="@dimen/margin_12dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/primaryTextColor"
            android:fontFamily="sans-serif"
            android:textAlignment="viewStart"
            android:textStyle="normal"
            />
    </LinearLayout>
</LinearLayout>